Just a test while reading JS

--- a/repos/js/index.html
+++ b/repos/js/index.html
@@ -8,6 +8,12 @@
 <body>
 <script>
     console.log("Hello, World!")
+    let admin;
+    let name;
+    admin = "Fran";
+    name = "HO"
+    admin = name;
+    alert (admin);
 </script>
 </body>
 </html>
