--- a/repos/js/index.html
+++ b/repos/js/index.html
@@ -7,13 +7,17 @@
 </head>
 <body>
 <script>
-    console.log("Hello, World!")
-    let admin;
-    let name;
-    admin = "Fran";
-    name = "HO"
-    admin = name;
-    alert (admin);
+    console.log ((4+6+9)/77);
+    let a=10;
+    console.log(a);
+    a*=9;
+    let b = 7*a;
+    console.log(b);
+    // Exercise 2 
+    const MAX = 57;
+    let actual = MAX - 13;
+    let percentage = actual /MAX;
+    console.log(percentage);
 </script>
 </body>
 </html>
