--- a/repos/DigitalOcean/nodes.html
+++ b/repos/DigitalOcean/nodes.html
@@ -26,6 +26,14 @@
   const h1 = document.getElementsByTagName('h1')[0];
   const p = document.getElementsByTagName('p')[0];
   const ul = document.getElementsByTagName('ul')[0];
+
+  ul.firstElementChild.style.background = "yellow";
+
+  for (let element of ul.children) {
+  element.style.background = 'lightgreen';
+
+  document.body.children[3].lastElementChild.style.background = 'fuchsia';
+}
 </script>
 
 </html>
