--- a/styles.html
+++ b/styles.html
@@ -10,6 +10,11 @@
     <script>
         const div = document.querySelector('div');
         //div.setAttribute('style', 'text-align: center');
+        // Make div into a circle and vertically center the text
+        div.style.borderRadius = '50%';
+        div.style.display = 'flex';
+        div.style.justifyContent = 'center';
+        div.style.alignItems = 'center';
     </script>
 
 </body>
